examples/test/testpolicy10284.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10284
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key14: value37
      key39: value41
      key19: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value27
          key43: value32
          key19: value8
